Fix: boton login ya no dispara submit fantasma

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -32,7 +32,8 @@
         required
       >
 
-      <button id="btnLogin">Ingresar</button>
+      <button type="button" id="btnLogin">Ingresar</button>
+
 
       <p id="msgError" class="error"></p>
     </div>
