Actualización de estilos Frontend + modal de logout + mejoras UI/UX

--- a/src/public/dashboard.html
+++ b/src/public/dashboard.html
@@ -34,5 +34,20 @@
   <script src="assets/js/auth.js"></script>
   <script src="assets/js/dashboard.js"></script>
 
+<!-- MODAL DE LOGOUT (Opción 2: Glassmorphism) -->
+<div id="logoutModal" class="modal-overlay hidden">
+  <div class="modal-box">
+    <h3>¿Seguro que deseas salir?</h3>
+    <p>Tu sesión se cerrará inmediatamente.</p>
+
+    <div class="modal-actions">
+      <button class="btn-cancel" id="cancelLogout">Cancelar</button>
+      <button class="btn-confirm" id="confirmLogout">Salir</button>
+    </div>
+  </div>
+</div>
+
+
+
 </body>
 </html>
