--- a/src/public/dashboard.html
+++ b/src/public/dashboard.html
@@ -9,45 +9,79 @@
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body>
+<body class="panel-body">
 
-  <!-- TOPBAR -->
-  <header class="topbar">
-    <h1>ECOMGEST</h1>
+  <!-- SIDEBAR LATERAL -->
+  <aside id="sidebar" class="sidebar expanded">
 
-    <div class="user-area">
-      <span id="nombreUsuario"></span>
-      <button id="btnLogout">Salir</button>
+    <div class="sidebar-header">
+      <span class="logo">ECOMGEST</span>
+      <button id="toggleSidebar" class="toggle-btn">☰</button>
     </div>
-  </header>
 
-  <!-- CONTENIDO -->
-  <main>
-    <h2>Bienvenido al sistema 👋</h2>
-    <p>Aquí vas a ver tus módulos, paneles, reportes y todo lo demás.</p>
+    <nav class="menu">
+      <a href="#" class="menu-item active">
+        <span class="icon">🏠</span>
+        <span class="label">Dashboard</span>
+      </a>
 
-    <div id="contenidoDinamico"></div>
+      <a href="#" class="menu-item">
+        <span class="icon">👤</span>
+        <span class="label">Usuarios</span>
+      </a>
+
+      <a href="#" class="menu-item">
+        <span class="icon">🛡</span>
+        <span class="label">Roles y Permisos</span>
+      </a>
+
+      <a href="#" class="menu-item">
+        <span class="icon">⚙️</span>
+        <span class="label">Configuración</span>
+      </a>
+    </nav>
+
+  </aside>
+
+  <!-- CONTENIDO PRINCIPAL -->
+  <main class="main-content">
+
+    <!-- TOPBAR SUPERIOR -->
+    <header class="topbar">
+      <div class="user-area">
+        <span id="nombreUsuario"></span>
+      </div>
+
+      <button id="btnLogout" class="logout-btn">Salir</button>
+    </header>
+
+    <!-- ÁREA DE CONTENIDO DINÁMICO -->
+    <section class="content-area">
+      <h1>Bienvenido al sistema 👋</h1>
+      <p>Aquí vas a ver tus módulos, paneles, reportes y todo lo demás.</p>
+
+      <div id="contenidoDinamico"></div>
+    </section>
+
   </main>
 
-  <!-- SCRIPTS (en orden) -->
+  <!-- SCRIPTS ORIGINALES -->
   <script src="assets/js/api.js"></script>
   <script src="assets/js/auth.js"></script>
   <script src="assets/js/dashboard.js"></script>
 
-<!-- MODAL DE LOGOUT (Opción 2: Glassmorphism) -->
-<div id="logoutModal" class="modal-overlay hidden">
-  <div class="modal-box">
-    <h3>¿Seguro que deseas salir?</h3>
-    <p>Tu sesión se cerrará inmediatamente.</p>
+  <!-- MODAL LOGOUT (OPCIÓN 2 - GLASSMORPHISM) -->
+  <div id="logoutModal" class="modal-overlay hidden">
+    <div class="modal-box">
+      <h3>¿Seguro que deseas salir?</h3>
+      <p>Tu sesión se cerrará inmediatamente.</p>
 
-    <div class="modal-actions">
-      <button class="btn-cancel" id="cancelLogout">Cancelar</button>
-      <button class="btn-confirm" id="confirmLogout">Salir</button>
+      <div class="modal-actions">
+        <button class="btn-cancel" id="cancelLogout">Cancelar</button>
+        <button class="btn-confirm" id="confirmLogout">Salir</button>
+      </div>
     </div>
   </div>
-</div>
-
-
 
 </body>
 </html>
